--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
         "test:watch": "vitest --watch"
     },
     "dependencies": {
+        "@ant-design/icons": "5.x",
         "@tanstack/react-query": "^5.84.1",
         "antd": "^5.26.7",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "react-dom": "^19.1.1",
+        "react-router-dom": "^7.8.0",
+        "recharts": "^3.1.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.32.0",
