--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     },
     "dependencies": {
         "@ant-design/icons": "5.x",
+        "@sentry/react": "^10.5.0",
         "@tanstack/react-query": "^5.84.1",
         "antd": "^5.26.7",
+        "axios": "^1.11.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-router-dom": "^7.8.0",
