--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tanstack/react-query": "^5.84.1",
         "antd": "^5.26.7",
         "axios": "^1.11.0",
+        "framer-motion": "^12.23.12",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-router-dom": "^7.8.0",
