--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@sentry/react": "^10.5.0",
         "@tanstack/react-query": "^5.84.1",
         "antd": "^5.26.7",
+        "antd-style": "^3.7.1",
         "axios": "^1.11.0",
         "framer-motion": "^12.23.12",
         "react": "^19.1.1",
