--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-  "name": "kawori-frontend",
-  "version": "2.2.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "cypress": "cypress open",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "compile": "tsc",
-    "test": "jest",
-    "test:ci": "jest --ci",
-    "coverage": "jest --coverage",
-    "slicemachine": "start-slicemachine"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^5.5.1",
-    "@ant-design/nextjs-registry": "^1.0.1",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@prismicio/client": "^7.11.0",
-    "@prismicio/next": "^1.7.0",
-    "@prismicio/react": "^2.9.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@sentry/nextjs": "^8.34.0",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "antd": "^5.21.4",
-    "antd-img-crop": "^4.23.0",
-    "axios": "^1.7.7",
-    "buffer": "^6.0.3",
-    "chart.js": "^4.4.5",
-    "dexie": "^4.0.8",
-    "dexie-react-hooks": "^1.1.7",
-    "file-saver": "^2.0.5",
-    "next": "^14.2.15",
-    "pusher-js": "^8.3.0",
-    "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.13.1",
-    "react-pusher": "^0.2.0",
-    "react-redux": "^9.1.2",
-    "sharp": "^0.33.5"
-  },
-  "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.51",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.1",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/file-saver": "^2.0.7",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.6",
-    "@types/react": "^18.3.11",
-    "@types/react-beautiful-dnd": "^13.1.8",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
-    "cypress": "^13.15.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.15",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.3",
-    "sass": "^1.80.0",
-    "slice-machine-ui": "^2.8.1",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  }
+    "name": "kawori-financial",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 3000",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "cypress": "cypress open",
+        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+        "compile": "tsc",
+        "test": "jest",
+        "test:ci": "jest --ci",
+        "coverage": "jest --coverage",
+        "slicemachine": "start-slicemachine"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^5.5.1",
+        "@ant-design/nextjs-registry": "^1.0.1",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@prismicio/client": "^7.11.0",
+        "@prismicio/next": "^1.7.0",
+        "@prismicio/react": "^2.9.0",
+        "@reduxjs/toolkit": "^2.3.0",
+        "@sentry/nextjs": "^8.34.0",
+        "@vercel/analytics": "^1.4.1",
+        "@vercel/speed-insights": "^1.1.0",
+        "antd": "^5.21.4",
+        "antd-img-crop": "^4.23.0",
+        "axios": "^1.7.7",
+        "buffer": "^6.0.3",
+        "chart.js": "^4.4.5",
+        "dexie": "^4.0.8",
+        "dexie-react-hooks": "^1.1.7",
+        "file-saver": "^2.0.5",
+        "next": "^14.2.15",
+        "pusher-js": "^8.3.0",
+        "react": "^18.3.1",
+        "react-beautiful-dnd": "^13.1.1",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.3.1",
+        "react-intersection-observer": "^9.13.1",
+        "react-pusher": "^0.2.0",
+        "react-redux": "^9.1.2",
+        "sharp": "^0.33.5"
+    },
+    "devDependencies": {
+        "@slicemachine/adapter-next": "^0.3.51",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.1",
+        "@testing-library/react": "^16.0.1",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/file-saver": "^2.0.7",
+        "@types/jest": "^29.5.13",
+        "@types/node": "^22.7.6",
+        "@types/react": "^18.3.11",
+        "@types/react-beautiful-dnd": "^13.1.8",
+        "@typescript-eslint/eslint-plugin": "^8.9.0",
+        "@typescript-eslint/parser": "^8.9.0",
+        "cypress": "^13.15.0",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "14.2.15",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "prettier": "^3.3.3",
+        "sass": "^1.80.0",
+        "slice-machine-ui": "^2.8.1",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3"
+    }
 }
