feat: create signin and signup page

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
         "@prismicio/react": "^2.9.0",
         "@reduxjs/toolkit": "^2.3.0",
         "@sentry/nextjs": "^8.34.0",
+        "@tanstack/react-query": "^5.90.3",
         "@vercel/analytics": "^1.4.1",
         "@vercel/speed-insights": "^1.1.0",
         "antd": "^5.21.4",
         "antd-img-crop": "^4.23.0",
+        "antd-style": "^3.7.1",
         "axios": "^1.7.7",
         "buffer": "^6.0.3",
         "chart.js": "^4.4.5",
