--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
         "@types/node": "^22.7.6",
         "@types/react": "^18.3.11",
         "@types/react-beautiful-dnd": "^13.1.8",
-        "@typescript-eslint/eslint-plugin": "^8.9.0",
-        "@typescript-eslint/parser": "^8.9.0",
+        "@typescript-eslint/eslint-plugin": "^8.46.1",
+        "@typescript-eslint/parser": "^8.46.1",
         "cypress": "^13.15.0",
         "eslint": "^8.57.0",
         "eslint-config-next": "14.2.15",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.3.3",
