--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "test:watch": "next test --watch",
-        "coverage": "next coverage",
-        "test": "next test",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "coverage": "jest --coverage",
         "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
         "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
         "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
@@ -32,14 +32,23 @@
         "react-dom": "19.2.0"
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/jest": "^30.0.0",
         "@types/node": "^24",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "babel-plugin-react-compiler": "1.0.0",
         "eslint": "^9",
         "eslint-config-next": "16.0.5",
+        "jest": "^30.2.0",
+        "jest-environment-jsdom": "^30.2.0",
         "prettier": "^3.7.1",
         "sass": "^1.94.2",
+        "ts-jest": "^29.4.5",
+        "ts-node": "^10.9.2",
         "typescript": "^5"
     },
     "packageManager": "yarn@4.12.0"
