feat(payments): Implement payment drawer editing and tests
Introduces an edit mode for the payments drawer, enabling updates to existing payment details. This includes disabling specific fields based on payment status. Also adds comprehensive unit tests using @faker-js/faker to validate drawer rendering and form submission logic.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-dom": "19.2.0"
     },
     "devDependencies": {
+        "@faker-js/faker": "^9",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.0",
