fix(types): Update Next.js routes type path
Adjusts the path for Next.js routes types to reflect changes in Next.js 14.3, moving from '/dev/types' to '/types'.

refactor(payments): Remove unused contract fields

Removes 'contract' and 'contract_name' fields from defaultPaymentDetail as they are no longer used.

chore(scripts): Add TypeScript compile script

Adds a 'compile' script to package.json to run the TypeScript compiler.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "coverage": "jest --coverage",
         "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
         "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
-        "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
+        "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+        "compile": "tsc"
     },
     "dependencies": {
         "@ant-design/nextjs-registry": "^1.3.0",
