--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "react-chartjs-2": "^5.3.1",
         "react-dom": "19.2.1",
         "react-is": "^16.0.7",
-        "recharts": "^3.5.1"
+        "recharts": "^3.5.1",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@faker-js/faker": "^9",
