--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
         "@fortawesome/free-solid-svg-icons": "^7.1.0",
         "@fortawesome/react-fontawesome": "^3.1.1",
         "@sentry/nextjs": "^10",
-        "@tanstack/react-query": "^5.90.12",
+        "@tanstack/react-query": "^5.90.20",
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
-        "antd": "^6.1.1",
-        "antd-style": "^3.7.1",
-        "axios": "^1.13.2",
+        "antd": "^6.2.2",
+        "antd-style": "^4.1.0",
+        "axios": "^1.13.4",
         "chart.js": "^4.5.1",
-        "next": "16.0.10",
-        "react": "19.2.3",
+        "next": "16.1.6",
+        "react": "19.2.4",
         "react-chartjs-2": "^5.3.1",
-        "react-dom": "19.2.3",
-        "react-is": "^19.2.3",
-        "recharts": "^3.6.0",
+        "react-dom": "19.2.4",
+        "react-is": "^19.2.4",
+        "recharts": "^3.7.0",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@faker-js/faker": "^9",
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
-        "@testing-library/react": "^16.3.1",
+        "@testing-library/react": "^16.3.2",
         "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^30.0.0",
         "@types/node": "^25",
@@ -47,15 +47,15 @@
         "@types/react-dom": "^19",
         "@types/react-is": "^19",
         "babel-plugin-react-compiler": "1.0.0",
+        "baseline-browser-mapping": "^2.9.19",
         "eslint": "^9",
-        "eslint-config-next": "16.0.10",
+        "eslint-config-next": "16.1.6",
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
-        "prettier": "^3.7.4",
-        "sass": "^1.97.0",
+        "prettier": "^3.8.1",
+        "sass": "^1.97.3",
         "ts-jest": "^29.4.6",
         "ts-node": "^10.9.2",
         "typescript": "^5"
-    },
-    "packageManager": "yarn@4.12.0"
+    }
 }
